# clearcore-python-client

./: .gitignore  logger.py  main.py  motor_states.py  pyproject.toml
clearcore_python_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: application.toml  logger.yaml
