[project]
name = "clearcore-python-client"
description = "An application to view serial data from a clearcore controller"

# If a project, then you can specify version here
version = "0.0.1"


readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { email = "matthew@davidson.engineering" },
    { name = "Matthew Davidson" },
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-threadsafe-serial @ git+https://github.com/generalmattza/python-threadsafe-serial.git",
    "remote-app-monitor",
]

# Use this line if your project comprises of modules only without any ./src/* files
#[tool.setuptools]
#py-modules = []

[project.optional-dependencies]
test = ["pytest >= 7.1.1"]



[tool.uv.sources]
remote-app-monitor = { git = "https://github.com/generalmattza/remote-app-monitor.git" }



[tool.pytest.ini_options]
#addopts = "--maxfail=1 -s"
#console_output_style = "progress"
#log_cli = false
#log_level = "INFO"
#log_cli_format = "%(asctime)s %(levelname)s %(message)s"
#log_file = "logs/pytest-logs.txt"
#log_file_level = "INFO"

# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
